[project]
name = "weather-mcp"
version = "1.0.0"
description = "和风天气 MCP 服务 - 提供实时天气和未来天气预报"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[project.scripts]
weather-mcp = "weather_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
